--- a/server/views/account/show.jade
+++ b/server/views/account/show.jade
@@ -30,11 +30,11 @@ block content
                 img.img-center.img-responsive.public-profile-img(src='https://s3.amazonaws.com/freecodecamp/camper-image-placeholder.png')
             h1.text-center.negative-5.profile-social-icons
                 if (twitter)
-                    a.fa.fa-twitter-square.text-primary(title="@#{username}'s Twitter Profile", href='https://twitter.com/' + twitter, target='_blank')
+                    a.fa.fa-twitter-square.text-primary(title="@#{username}'s Twitter Profile", href='https://twitter.com/' + twitter, target='_blank', rel='noopener noreferrer')
                 if (github)
-                    a.fa.fa-github-square.text-primary(title="@#{username}'s GitHub Profile", href=github, target='_blank')
+                    a.fa.fa-github-square.text-primary(title="@#{username}'s GitHub Profile", href=github, target='_blank', rel='noopener noreferrer')
                 if (linkedin)
-                    a.fa.fa-linkedin-square.text-primary(title="@#{username}'s LinkedIn Profile", href=linkedin, target='_blank')
+                    a.fa.fa-linkedin-square.text-primary(title="@#{username}'s LinkedIn Profile", href=linkedin, target='_blank' rel='noopener noreferrer')
             h1.flat-top.wrappable= name
             h1.flat-top.wrappable= location
             h1.flat-top.text-primary= "[ " + (progressTimestamps.length) + " ]"
