--- a/server/views/news/deprecated.jade
+++ b/server/views/news/deprecated.jade
@@ -3,5 +3,5 @@ block content
     h1.text-center We have discontinued Camper News.
     h2.text-center We are now using our subreddit instead.
     h3.text-center Here is a&thinsp;
-       a(href='https://www.reddit.com/r/FreeCodeCamp/search?sort=top&q=flair%3AArticle&restrict_sr=on&t=week' target='_blank') Camper News-like way to use our subreddit
+       a(href='https://www.reddit.com/r/FreeCodeCamp/search?sort=top&q=flair%3AArticle&restrict_sr=on&t=week' target='_blank' rel='noopener noreferrer') Camper News-like way to use our subreddit
        | .
