--- a/server/views/resources/shop.jade
+++ b/server/views/resources/shop.jade
@@ -9,9 +9,9 @@ block content
             h4 Only $19.99!
             p This high-quality American Apparel t-shirt will help you look like the fantastic developer you are.
             .spacer
-            a.btn.btn-lg.signup-btn.btn-block(href='//teespring.com/free-code-camp-tshirt-black#pid=70&cid=2343&sid=front' target='_blank') Get this awesome shirt
+            a.btn.btn-lg.signup-btn.btn-block(href='//teespring.com/free-code-camp-tshirt-black#pid=70&cid=2343&sid=front' target='_blank' rel='noopener noreferrer') Get this awesome shirt
             .button-spacer
-            a.btn.btn-primary.btn-lg.btn-block(href='//teespring.com/black-free-code-camp-tshirt-eu#pid=375&cid=100052&sid=front' target='_blank') Get it here if you live in Europe
+            a.btn.btn-primary.btn-lg.btn-block(href='//teespring.com/black-free-code-camp-tshirt-eu#pid=375&cid=100052&sid=front' target='_blank' rel='noopener noreferrer') Get it here if you live in Europe
             hr
     .row
         .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.text-center
@@ -20,9 +20,9 @@ block content
             h4 Only $19.99!
             p Features Free Code Camp's classy "function call" logo. You can't have too many awesome black t-shirts!
             .spacer
-            a.btn.btn-lg.signup-btn.btn-block(href='//teespring.com/free-code-camp-tshirt-black' target='_blank') Get this awesome shirt
+            a.btn.btn-lg.signup-btn.btn-block(href='//teespring.com/free-code-camp-tshirt-black' target='_blank' rel='noopener noreferrer') Get this awesome shirt
             .button-spacer
-            a.btn.btn-primary.btn-lg.btn-block(href='//teespring.com/black-free-code-camp-tshirt-eu' target='_blank') Get it here if you live in Europe
+            a.btn.btn-primary.btn-lg.btn-block(href='//teespring.com/black-free-code-camp-tshirt-eu' target='_blank' rel='noopener noreferrer') Get it here if you live in Europe
             hr
     .row
         .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.text-center
